--- a/todo_list_firebase/cine_favorite/pubspec.yaml
+++ b/todo_list_firebase/cine_favorite/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   cloud_firestore: ^6.0.1
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
